customerDatabase/src/main/java/com/hermes/customerDatabase/k8s/customerdatabaseweb-deployment.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START gke_manifests_helloweb_deployment_deployment_helloweb]
# [START container_helloapp_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customerdatabaseweb
  labels:
    app: customer-database
spec:
  selector:
    matchLabels:
      app: customer-database
      tier: web
  template:
    metadata:
      labels:
        app: customerdatabase
        tier: web
    spec:
      containers:
        - name: customer-database-app
          image: europe-west1-docker.pkg.dev/google-samples/containers/gke/customer-database-app:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
# [END container_customerdatabaseapp_deployment]
# [END gke_manifests_customerdatabaseweb_deployment_deployment_customerdatabaseweb]
---
