customerDatabase/src/main/java/com/hermes/customerDatabase/k8s/customerdatabaseweb-service-load-balancer.yaml


# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START gke_manifests_helloweb_service_load_balancer_service_helloweb]
# [START container_helloapp_service_load_balancer]
apiVersion: v1
kind: Service
metadata:
  name: customerdatabaseweb
  labels:
    app: customer-database
    tier: web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: customer-database
    tier: web
# [END container_customerdatabaseapp_service_load_balancer]
# [END gke_manifests_customerdatabaseweb_service_load_balancer_service_customerdatabaseweb]
---
