customerDatabase/src/main/java/com/hermes/customerDatabase/k8s/customerdatabaseweb-service-static-ip.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START gke_manifests_helloweb_service_static_ip_service_helloweb]
# [START container_helloapp_service]
apiVersion: v1
kind: Service
metadata:
  name: customerdatabaseweb
  labels:
    app: customer-database
spec:
  selector:
    app: customer-database
    tier: web
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
# [END container_customerdatabaseapp_service]
# [END gke_manifests_customerdatabaseweb_service_static_ip_service_customerdatabaseweb]
---
