customerDatabase/src/main/java/com/hermes/customerDatabase/k8s/customerdatabaseweb-ingress-static-ip.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START container_helloapp_ingress]
# [START gke_manifests_helloweb_ingress_static_ip_ingress_helloweb]
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customerdatabaseweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: customerdatabaseweb-ip
  labels:
    app: customer-database
spec:
  defaultBackend:
    service:
      name: customerdatabaseweb-backend
      port:
        number: 8080
# [END gke_manifests_customerdatabaseweb_ingress_static_ip_ingress_customerdatabaseweb]
---
# [START gke_manifests_customerdatabaseweb_ingress_static_ip_service_customerdatabaseweb_backend]
apiVersion: v1
kind: Service
metadata:
  name: customerdatabaseweb-backend
  labels:
    app: customer-database
spec:
  type: NodePort
  selector:
    app: customer-database
    tier: web
  ports:
    - port: 8080
      targetPort: 8080
# [END gke_manifests_customerdatabaseweb_ingress_static_ip_service_customerdatabaseweb_backend]
# [END container_customerdatabaseapp_ingress]
---
